tests/neg/i18274.scala
//> using options -explain

object Foo extends AnyVal // error
