tests/neg/i18274.check
-- [E068] Syntax Error: tests/neg/i18274.scala:3:7 ---------------------------------------------------------------------
3 |object Foo extends AnyVal // error
  |       ^
  |       object Foo cannot extend AnyVal
  |---------------------------------------------------------------------------------------------------------------------
  | Explanation (enabled by `-explain`)
  |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  | Only classes (not objects) are allowed to extend AnyVal.
   ---------------------------------------------------------------------------------------------------------------------
